# taskem

./: .travis.yml  Cargo.toml  README.md
src/: error.rs  executor.rs  lib.rs
src/model/: task.rs
src/repository/: in_memory.rs  mod.rs
src/service/: task.rs
tests/: taskem_in_memory_test.rs
tests/tests/service/: task.rs
