[package]
name = "taskem"
version = "0.0.0"
authors = ["ufoscout <ufoscout@gmail.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/ufoscout/taskem"
repository = "https://github.com/ufoscout/taskem"
#keywords = ["persistent", "persistence", "task", "job", "scheduler", "cloud", "cron", "pg", "postgres", "mysql"]
#description = "A scheduler for periodic jobs or single tasks execution. Cloud ready and with optional tasks persistence."

[dependencies]
c3p0_common = "0.20"
cron = "0.6"
chrono = "0.4"
chrono-tz = { version = "0.5", features=["serde"] }
err-derive= "0.1"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
time = "0.1"
uuid = { version = "0.7", features = ["v4"] }

[dev-dependencies]
lazy_static = "1.4"
maybe-single = "0.4"
maplit = "1"
testcontainers = "0.8"
rand = "0.7"
